push week 2 notebooks

--- a/final-project/EDA.ipynb
+++ b/final-project/EDA.ipynb
@@ -31,7 +31,19 @@
     "debugger": true
    },
    "name": "ds_env",
-   "resource_dir": "/projects/00955498-d90a-4f7c-a6db-dc898878bed5/.local/share/jupyter/kernels/ds_env"
+   "resource_dir": "/projects/ab30f689-b6af-4a46-9708-3e4f6e67dbc6/.local/share/jupyter/kernels/ds_env"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
